--- a/products/polishing/brass-electropolishing-solution.html
+++ b/products/polishing/brass-electropolishing-solution.html
@@ -366,55 +366,52 @@
         </div>
       </section>
 
-      <!-- Process -->
-      <section id="process" class="reveal section-block" aria-labelledby="process-h">
-        <h2 id="process-h" class="section" data-i18n-key="process_h">ขั้นตอนการทำงาน (ทั่วไป)</h2>
-        <div class="content">
-          <ul>
-            <li data-i18n-key="proc_1">ต้มล้างไขมันด้วย Soak Clean B1 <strong>60 กรัม/ลิตร</strong> (กรณีมันมาก)</li>
-            <li data-i18n-key="proc_2">ล้างน้ำสะอาด</li>
-            <li data-i18n-key="proc_3">จุ่ม <strong>Desmut</strong> 1–2 นาที</li>
-            <li data-i18n-key="proc_4">จุ่ม <strong>LASER B</strong> 1–3 นาที (จนผิวเป็นสีน้ำตาลเข้มทั่ว)</li>
-            <li data-i18n-key="proc_5">ล้างน้ำสะอาด</li>
-            <li data-i18n-key="proc_6">จุ่มกรดกำมะถัน <strong>3% v/v</strong> 5–30 วินาที เพื่อเปิดเงา</li>
-            <li data-i18n-key="proc_7">ล้างน้ำสะอาด</li>
-            <li data-i18n-key="proc_8">ชิ้นงานที่ Zn/Pb สูง: จุ่มกรดฟอสฟอริก <strong>30% v/v</strong> 1–2 นาที</li>
-            <li data-i18n-key="proc_9">ล้างน้ำสะอาด</li>
-            <li data-i18n-key="proc_10">จุ่ม <strong>น้ำยากันหมอง</strong> (1 ซีซี/ลิตร) 30 วินาที</li>
-            <li data-i18n-key="proc_11">อบแห้ง/ชุบต่อ</li>
-          </ul>
-        </div>
-      </section>
+<!-- Process: LASER B -->
+<section id="process" class="reveal section-block" aria-labelledby="process-h">
+  <h2 id="process-h" class="section" data-i18n-key="laser_process_h">ขั้นตอนการทำความสะอาดและเตรียมผิวด้วย LASER B</h2>
+  <div class="content">
+    <p data-i18n-key="laser_intro_p">การเตรียมผิวที่ถูกต้องช่วยกำจัดสิ่งสกปรกและสร้างพื้นผิวที่เหมาะสมสำหรับการชุบขั้นต่อไป</p>
 
-      <!-- Cast brass path -->
-      <section id="cast" class="reveal section-block" aria-labelledby="cast-h">
-        <h2 id="cast-h" class="section" data-i18n-key="cast_h">เวิร์กโฟลว์แนะนำ — ทองเหลืองหล่อ</h2>
-        <div class="content">
-          <ol>
-            <li data-i18n-key="cast_1">ต้มล้างไขมัน B1 60 กรัม/ลิตร → ล้าง</li>
-            <li data-i18n-key="cast_2">Desmut 1–2 นาที → ล้าง</li>
-            <li data-i18n-key="cast_3">LASER B 1–3 นาที (350 ซีซี/ลิตร) → ล้าง</li>
-            <li data-i18n-key="cast_4">กรดกำมะถัน <strong>10% v/v</strong> 15–30 วินาที → ล้าง</li>
-            <li data-i18n-key="cast_5">เคลือบผิวชั่วคราวด้วย <strong>กรดโครมิก/โซเดียมไบโครเมต 5–10%</strong> → ล้าง</li>
-            <li data-i18n-key="cast_6">ล้างน้ำกลั่นเพื่อล้างคลอไรด์ → อบแห้ง/ชุบต่อ</li>
-          </ol>
-          <p class="lead" data-i18n-key="cast_note"><strong>หมายเหตุ:</strong> ขั้นตอนและความเข้มข้นอาจต้องปรับตามผิวจริงและคุณภาพน้ำล้าง</p>
-        </div>
-      </section>
+    <p class="lead" data-i18n-key="laser_steps_h">ขั้นตอนการทำงาน (ทั่วไป)</p>
+    <ol>
+      <li data-i18n-key="laser_step1_soak">ต้มล้างไขมันด้วย Soak Clean B1 60 กรัม/ลิตร แล้วล้างน้ำสะอาด</li>
+      <li data-i18n-key="laser_step2_rinse">ล้างน้ำสะอาด</li>
+      <li data-i18n-key="laser_step3_desmut">จุ่ม Desmut 1–2 นาที แล้วล้างน้ำสะอาด</li>
+      <li data-i18n-key="laser_step4_rinse">ล้างน้ำสะอาด</li>
+      <li data-i18n-key="laser_step5_laserb">จุ่ม LASER B 1–3 นาที จนผิวเป็นสีน้ำตาลเข้มสม่ำเสมอ แล้วล้างน้ำสะอาด</li>
+      <li data-i18n-key="laser_step6_rinse">ล้างน้ำสะอาด</li>
+      <li data-i18n-key="laser_step7_h2so4">จุ่มกรดกำมะถัน 3% v/v 5–30 วินาที เพื่อเปิดผิวให้เงา แล้วล้างน้ำสะอาด</li>
+      <li data-i18n-key="laser_step8_rinse">ล้างน้ำสะอาด</li>
+      <li data-i18n-key="laser_step9_phosphoric">สำหรับชิ้นงานที่ Zn/Pb สูง จุ่มกรดฟอสฟอริก 30% v/v 1–2 นาที แล้วล้างน้ำสะอาด</li>
+      <li data-i18n-key="laser_step10_rinse">ล้างน้ำสะอาด</li>
+      <li data-i18n-key="laser_step11_antitarnish">จุ่มน้ำยากันหมอง 1 ซีซี/ลิตร 30 วินาที</li>
+      <li data-i18n-key="laser_step12_dry">เป่าลมหรืออบให้แห้ง ก่อนเข้าสู่ขั้นชุบถัดไป</li>
+    </ol>
 
-      <!-- Care & safety -->
-      <section id="care" class="reveal section-block" aria-labelledby="care-h">
-        <h2 id="care-h" class="section" data-i18n-key="care_h">การดูแลบ่อ & ความปลอดภัย</h2>
-        <div class="content">
-          <ul>
-            <li data-i18n-key="care_1">เก็บน้ำยาในที่เย็น อากาศถ่ายเท ตรวจ <strong>pH &lt; 2.0</strong> สม่ำเสมอ</li>
-            <li data-i18n-key="care_2">ปรับ pH ด้วยกรดกำมะถันเข้มข้นเมื่อ pH สูง</li>
-            <li data-i18n-key="care_3">ใช้น้ำ DI/RO ในการผสมทุกครั้ง</li>
-            <li data-i18n-key="care_4">สวม PPE (ถุงมือ แว่น หน้ากาก) และจัดการระบายอากาศ</li>
-            <li data-i18n-key="care_5">ของเสียมีกรด/โลหะ: บำบัดตามกฎหมายท้องถิ่น อ้างอิง SDS/TDS</li>
-          </ul>
-        </div>
-      </section>
+    <p class="lead" data-i18n-key="cast_flow_h">แนะนำสำหรับทองเหลืองหล่อ</p>
+    <ol>
+      <li data-i18n-key="cast_step1_b1">ต้มล้างไขมัน B1 60 กรัม/ลิตร แล้วล้างน้ำ</li>
+      <li data-i18n-key="cast_step2_desmut">จุ่ม Desmut 1–2 นาที แล้วล้างน้ำ</li>
+      <li data-i18n-key="cast_step3_laserb">จุ่ม LASER B 1–3 นาที ที่ความเข้มข้น 350 ซีซี/ลิตร แล้วล้างน้ำ</li>
+      <li data-i18n-key="cast_step4_h2so4">จุ่มกรดกำมะถัน 10% v/v 15–30 วินาที แล้วล้างน้ำ</li>
+      <li data-i18n-key="cast_step5_temporal_coat">เคลือบชั่วคราวด้วยกรดโครมิกหรือโซเดียมไบโครเมต 5–10% เพื่อลดการหมอง</li>
+      <li data-i18n-key="cast_step6_di_rinse">ล้างน้ำกลั่น เพื่อกำจัดคลอไรด์ตกค้าง</li>
+      <li data-i18n-key="cast_step7_dry">อบแห้ง หรือชุบต่อทันที</li>
+    </ol>
+  </div>
+</section>
+
+<!-- Bath care & Safety -->
+<section id="bathcare" class="reveal section-block" aria-labelledby="bathcare-h">
+  <h2 id="bathcare-h" class="section" data-i18n-key="bath_care_h">การดูแลบ่อและข้อควรระวังเพื่อความปลอดภัย</h2>
+  <div class="content">
+    <ul>
+      <li data-i18n-key="bath_care_storage">เก็บน้ำยาในที่เย็น อากาศถ่ายเท ตรวจสอบค่า pH ให้ต่ำกว่า 2.0 สม่ำเสมอ และปรับด้วยกรดกำมะถันเมื่อจำเป็น</li>
+      <li data-i18n-key="bath_care_water">ผสมน้ำยาด้วยน้ำ DI หรือ RO เท่านั้น เพื่อความคงที่ของกระบวนการ</li>
+      <li data-i18n-key="safety_ppe_laser">สวม PPE ได้แก่ ถุงมือ แว่นตานิรภัย และหน้ากาก ระวังการสัมผัสโดยตรงและไอระเหย</li>
+    </ul>
+  </div>
+</section>
 
     </article>
   </main>
@@ -520,34 +517,35 @@
         cond_ph:"pH", cond_ph_v:"< 2.0 (หาก > 2.0 ให้ปรับด้วยกรดกำมะถัน)",
         cond_modes:"โหมดการผลิต", cond_modes_v:"ถังแขวน / ถังกลิ้ง",
 
-        process_h:"ขั้นตอนการทำงาน (ทั่วไป)",
-        proc_1:"ต้มล้างไขมันด้วย Soak Clean B1 60 กรัม/ลิตร (กรณีมันมาก)",
-        proc_2:"ล้างน้ำสะอาด",
-        proc_3:"จุ่ม Desmut 1–2 นาที",
-        proc_4:"จุ่ม LASER B 1–3 นาที (จนผิวเป็นสีน้ำตาลเข้มทั่ว)",
-        proc_5:"ล้างน้ำสะอาด",
-        proc_6:"จุ่มกรดกำมะถัน 3% v/v 5–30 วินาที เพื่อเปิดเงา",
-        proc_7:"ล้างน้ำสะอาด",
-        proc_8:"ชิ้นงานที่ Zn/Pb สูง: จุ่มกรดฟอสฟอริก 30% v/v 1–2 นาที",
-        proc_9:"ล้างน้ำสะอาด",
-        proc_10:"จุ่ม น้ำยากันหมอง (1 ซีซี/ลิตร) 30 วินาที",
-        proc_11:"อบแห้ง/ชุบต่อ",
+    laser_process_h: "ขั้นตอนการทำความสะอาดและเตรียมผิวด้วย LASER B",
+    laser_intro_p: "การเตรียมผิวที่ถูกต้องช่วยกำจัดสิ่งสกปรกและสร้างพื้นผิวที่เหมาะสมสำหรับการชุบขั้นต่อไป",
+    laser_steps_h: "ขั้นตอนการทำงาน (ทั่วไป)",
+    laser_step1_soak: "ต้มล้างไขมันด้วย Soak Clean B1 60 กรัม/ลิตร แล้วล้างน้ำสะอาด",
+    laser_step2_rinse: "ล้างน้ำสะอาด",
+    laser_step3_desmut: "จุ่ม Desmut 1–2 นาที แล้วล้างน้ำสะอาด",
+    laser_step4_rinse: "ล้างน้ำสะอาด",
+    laser_step5_laserb: "จุ่ม LASER B 1–3 นาที จนผิวเป็นสีน้ำตาลเข้มสม่ำเสมอ แล้วล้างน้ำสะอาด",
+    laser_step6_rinse: "ล้างน้ำสะอาด",
+    laser_step7_h2so4: "จุ่มกรดกำมะถัน 3% v/v 5–30 วินาที เพื่อเปิดผิวให้เงา แล้วล้างน้ำสะอาด",
+    laser_step8_rinse: "ล้างน้ำสะอาด",
+    laser_step9_phosphoric: "สำหรับชิ้นงานที่ Zn/Pb สูง จุ่มกรดฟอสฟอริก 30% v/v 1–2 นาที แล้วล้างน้ำสะอาด",
+    laser_step10_rinse: "ล้างน้ำสะอาด",
+    laser_step11_antitarnish: "จุ่มน้ำยากันหมอง 1 ซีซี/ลิตร 30 วินาที",
+    laser_step12_dry: "เป่าลมหรืออบให้แห้ง ก่อนเข้าสู่ขั้นชุบถัดไป",
 
-        cast_h:"เวิร์กโฟลว์แนะนำ — ทองเหลืองหล่อ",
-        cast_1:"ต้มล้างไขมัน B1 60 กรัม/ลิตร → ล้าง",
-        cast_2:"Desmut 1–2 นาที → ล้าง",
-        cast_3:"LASER B 1–3 นาที (350 ซีซี/ลิตร) → ล้าง",
-        cast_4:"กรดกำมะถัน 10% v/v 15–30 วินาที → ล้าง",
-        cast_5:"เคลือบผิวชั่วคราวด้วย กรดโครมิก/โซเดียมไบโครเมต 5–10% → ล้าง",
-        cast_6:"ล้างน้ำกลั่นเพื่อล้างคลอไรด์ → อบแห้ง/ชุบต่อ",
-        cast_note:"หมายเหตุ: ขั้นตอนและความเข้มข้นอาจต้องปรับตามผิวจริงและคุณภาพน้ำล้าง",
+    cast_flow_h: "แนะนำสำหรับทองเหลืองหล่อ",
+    cast_step1_b1: "ต้มล้างไขมัน B1 60 กรัม/ลิตร แล้วล้างน้ำ",
+    cast_step2_desmut: "จุ่ม Desmut 1–2 นาที แล้วล้างน้ำ",
+    cast_step3_laserb: "จุ่ม LASER B 1–3 นาที ที่ความเข้มข้น 350 ซีซี/ลิตร แล้วล้างน้ำ",
+    cast_step4_h2so4: "จุ่มกรดกำมะถัน 10% v/v 15–30 วินาที แล้วล้างน้ำ",
+    cast_step5_temporal_coat: "เคลือบชั่วคราวด้วยกรดโครมิกหรือโซเดียมไบโครเมต 5–10% เพื่อลดการหมอง",
+    cast_step6_di_rinse: "ล้างน้ำกลั่น เพื่อกำจัดคลอไรด์ตกค้าง",
+    cast_step7_dry: "อบแห้ง หรือชุบต่อทันที",
 
-        care_h:"การดูแลบ่อ & ความปลอดภัย",
-        care_1:"เก็บน้ำยาในที่เย็น อากาศถ่ายเท ตรวจ pH < 2.0 สม่ำเสมอ",
-        care_2:"ปรับ pH ด้วยกรดกำมะถันเข้มข้นเมื่อ pH สูง",
-        care_3:"ใช้น้ำ DI/RO ในการผสมทุกครั้ง",
-        care_4:"สวม PPE (ถุงมือ แว่น หน้ากาก) และจัดการระบายอากาศ",
-        care_5:"ของเสียมีกรด/โลหะ: บำบัดตามกฎหมายท้องถิ่น อ้างอิง SDS/TDS",
+    bath_care_h: "การดูแลบ่อและข้อควรระวังเพื่อความปลอดภัย",
+    bath_care_storage: "เก็บน้ำยาในที่เย็น อากาศถ่ายเท ตรวจสอบค่า pH ให้ต่ำกว่า 2.0 สม่ำเสมอ และปรับด้วยกรดกำมะถันเมื่อจำเป็น",
+    bath_care_water: "ผสมน้ำยาด้วยน้ำ DI หรือ RO เท่านั้น เพื่อความคงที่ของกระบวนการ",
+    safety_ppe_laser: "สวม PPE ได้แก่ ถุงมือ แว่นตานิรภัย และหน้ากาก ระวังการสัมผัสโดยตรงและไอระเหย",
 
         footer_products:"หมวดผลิตภัณฑ์",
         footer_contact:"ติดต่อเรา",
@@ -603,34 +601,35 @@
         cond_ph:"pH", cond_ph_v:"< 2.0 (adjust with H₂SO₄ if > 2.0)",
         cond_modes:"Line mode", cond_modes_v:"Rack / Barrel",
 
-        process_h:"Process steps (general)",
-        proc_1:"Soak clean with B1 at 60 g/L (if heavily oily)",
-        proc_2:"Rinse well",
-        proc_3:"Desmut 1–2 min",
-        proc_4:"LASER B 1–3 min (uniform dark-brown surface)",
-        proc_5:"Rinse well",
-        proc_6:"Sulfuric acid 3% v/v, 5–30 s to open gloss",
-        proc_7:"Rinse well",
-        proc_8:"For high Zn/Pb brass: phosphoric acid 30% v/v, 1–2 min",
-        proc_9:"Rinse well",
-        proc_10:"Anti-tarnish 1 cc/L, 30 s",
-        proc_11:"Dry or proceed to plating",
+   laser_process_h: "Surface Preparation with LASER B",
+    laser_intro_p: "Proper surface prep removes contaminants and creates an ideal substrate for subsequent plating.",
+    laser_steps_h: "General Workflow",
+    laser_step1_soak: "Boil-clean in Soak Clean B1 at 60 g/L, then rinse with clean water.",
+    laser_step2_rinse: "Rinse with clean water.",
+    laser_step3_desmut: "Dip in Desmut for 1–2 minutes, then rinse.",
+    laser_step4_rinse: "Rinse with clean water.",
+    laser_step5_laserb: "Dip in LASER B for 1–3 minutes until a uniform dark-brown surface forms, then rinse.",
+    laser_step6_rinse: "Rinse with clean water.",
+    laser_step7_h2so4: "Dip in sulfuric acid 3% v/v for 5–30 seconds to re-brighten, then rinse.",
+    laser_step8_rinse: "Rinse with clean water.",
+    laser_step9_phosphoric: "For high Zn/Pb parts, dip in phosphoric acid 30% v/v for 1–2 minutes, then rinse.",
+    laser_step10_rinse: "Rinse with clean water.",
+    laser_step11_antitarnish: "Dip in anti-tarnish 1 cc/L for 30 seconds.",
+    laser_step12_dry: "Air-blow or oven dry before subsequent plating steps.",
 
-        cast_h:"Recommended workflow — Cast brass",
-        cast_1:"Soak clean B1 60 g/L → Rinse",
-        cast_2:"Desmut 1–2 min → Rinse",
-        cast_3:"LASER B 1–3 min (350 cc/L) → Rinse",
-        cast_4:"H₂SO₄ 10% v/v, 15–30 s → Rinse",
-        cast_5:"Temporary passivation with chromic acid / sodium bichromate 5–10% → Rinse",
-        cast_6:"DI rinse to remove chlorides → Dry/plating",
-        cast_note:"Note: Adjust steps/strength to actual surface condition and rinse quality.",
+    cast_flow_h: "Recommended Workflow for Cast Brass",
+    cast_step1_b1: "Boil-clean in B1 at 60 g/L, then rinse.",
+    cast_step2_desmut: "Dip in Desmut for 1–2 minutes, then rinse.",
+    cast_step3_laserb: "Dip in LASER B for 1–3 minutes at 350 cc/L, then rinse.",
+    cast_step4_h2so4: "Dip in sulfuric acid 10% v/v for 15–30 seconds, then rinse.",
+    cast_step5_temporal_coat: "Temporary passivation in chromic acid or sodium bichromate 5–10% to suppress tarnish.",
+    cast_step6_di_rinse: "Final DI rinse to remove residual chlorides.",
+    cast_step7_dry: "Dry or proceed to plating immediately.",
 
-        care_h:"Bath care & safety",
-        care_1:"Store cool, ventilated; verify pH < 2.0 regularly.",
-        care_2:"Adjust pH with concentrated sulfuric acid when pH rises.",
-        care_3:"Use DI/RO water for all make-ups.",
-        care_4:"Wear PPE (gloves, goggles, acid vapor mask) and ensure ventilation.",
-        care_5:"Waste contains acids/metals: treat per local regulations; consult SDS/TDS.",
+    bath_care_h: "Bath Care and Safety",
+    bath_care_storage: "Store cool with good ventilation. Keep bath pH consistently below 2.0 and adjust with sulfuric acid as needed.",
+    bath_care_water: "Make up with DI or RO water only for process consistency.",
+    safety_ppe_laser: "Wear PPE (gloves, safety goggles, respirator). Avoid direct contact and fumes.",
 
         footer_products:"Products",
         footer_contact:"Contact Us",
